/**
 * Copyright (C) 2013-2017 Akka.NET project <https://github.com/akkadotnet/akka.net>
 */

syntax = "proto3";
package Akka.Cluster.Sharding.Serialization.Proto.Msg;

import 'duration.proto';
import "ContainerFormats.proto";

message CoordinatorState {
  message ShardEntry {
    string shardId = 1;
    string regionRef = 2;
  }

  repeated ShardEntry shards = 1;
  repeated string regions = 2;
  repeated string regionProxies = 3;
  repeated string unallocatedShards = 4;
}

message ActorRefMessage {
  string ref = 1;
}

message ShardIdMessage {
  string shard = 1;
}

message ShardHomeAllocated {
  string shard = 1;
  string region = 2;
}

message ShardHome {
  string shard = 1;
  string region = 2;
}

message EntityState {
  repeated string entities = 1;
}

// not written anymore but kept for backwards compatibility
message EntityStarted {
  string entityId = 1;
}

message EntitiesStarted {
    repeated string entityId = 1;
}

// not written anymore but kept for backwards compatibility
message EntityStopped {
  string entityId = 1;
}

message EntitiesStopped {
  repeated string entityId = 1;
}

message ShardStats {
  string shard = 1;
  int32 entityCount = 2;
}

message ShardRegionStats {
  map<string, int32> stats = 1;
  repeated string failed = 2;
}

message GetClusterShardingStats{
  google.protobuf.Duration timeout = 1;
}

message ClusterShardingStats{
  repeated ClusterShardingStatsEntry stats = 1;
}

message ClusterShardingStatsEntry{
    Akka.Remote.Serialization.Proto.Msg.AddressData address = 1;
    ShardRegionStats stats = 2;
}
message CurrentRegions {
  repeated Akka.Remote.Serialization.Proto.Msg.AddressData regions = 1;
}

message StartEntity {
  string entityId = 1;
}

message StartEntityAck {
  string entityId = 1;
  string shardId = 2;
}

message CurrentShardState {
  string shardId = 1;
  repeated string entityIds = 2;
}

message ShardState {
  string shardId = 1;
  repeated string entityIds = 2;
}

message CurrentShardRegionState {
  repeated ShardState shards = 1;
  repeated string failed = 2;
}

message RememberedShardState {
    repeated string shardId = 1;
    bool marker = 2;
}
